# phase_margin_llm

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  phase_margin_llms.tex  references.bib
papers/: README.md  imp_paper_v1.tex  imp_paper_v2.tex  imp_paper_v3.tex  imp_paper_v3_submission.tex
pipeline/: .gitignore  README.md  pyproject.toml  requirements.txt
pipeline/experiments/: analyze_hypothesis_correctness.py  print_code_summaries.py  print_v2_summaries.py  run_32b_v3.sh  run_embed_validation.py  run_extensive_validation.py  run_imp_benchmark.py  run_imp_benchmark2.py  run_imp_benchmark3.py  run_imp_code_benchmark.py  run_imp_experiment.py  sample_hypotheses.py
pipeline/notebooks/: 01_synthetic_lti_validation.ipynb  02_paraphrasing_2cycle_demo.ipynb  03_walkthrough.ipynb  _build_notebooks.py
pipeline/src/phase_margin/: __init__.py  cli.py  embedder.py  ground_truth.py  identification.py  loops.py  margin.py  pipeline.py  probe.py  types.py
pipeline/src/phase_margin/coding/: bug_templates.py  grader.py
pipeline/src/phase_margin/llm/: __init__.py  anthropic_client.py  base.py  mock.py  ollama_client.py  transformers_client.py
pipeline/tests/: test_fixes.py  test_identification.py  test_margin.py  test_path_beta.py  test_synthetic_lti.py
results/experiment_20260428_203207_full_v1/: hypotheses.json  log.txt  manifest.json  probe_config.default.json  summary.csv  summary.json
results/experiment_20260428_203207_full_v1/raw/llama3.1_70b-instruct-q4_K_M__emotional__seed0/: ground_truth.json  margin_report.json  purity_null_period2.npy  trajectory.npy  (+1 more)
(+80 files in other folders)
